# calculator-api

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  main.yml
calculator-api/: main.py  models.py
calculator_api/: functions.py  main.py  models.py
calculator_api/tests/: test_unidade.py
calculator_api/tests/integracao/: test_soma_integracao.py  test_subtracao_integracao.py
calculator_api/tests/unidade/: test_soma.py  test_soma_unidade.py  test_subtracao_unidade.py
scripts/: api_reload.sh
