[tool.poetry]
name = "calculator-api"
version = "0.1.0"
description = "Projeto destinado a ser utilizado no TCC de Eng. Computação "
authors = ["Mário Victor Ribeiro Silva <mariovictorrs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.5"
flake8 = "^4.0.1"
mypy = "^0.942"
vulture = "^2.3"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = ["migrations/"]

[tool.vulture]
exclude = ["migrations/"]
make_whitelist = true
min_confidence = 80
paths = ["calculator_api/"]
sort_by_size = true
ignore_names = ["cls"]